Implement dynamic compression type selection and fallback for client telemetry